# Proyecto-3-TEC-File-System

./: README.md
ControllerNode/: CMakeLists.txt  controllernodesocket.cpp  controllernodesocket.h  main.cpp
DiskNode/: CMakeLists.txt  connectiondialog.cpp  connectiondialog.h  connectiondialog.ui  main.cpp  widget.cpp  widget.h  widget.ui
DiskNodes/: DiskNodes.pro  Infor.xml  connectiondialog.cpp  connectiondialog.h  connectiondialog.ui  main.cpp  widget.cpp  widget.h  widget.ui
DiskNodes2/: DiskNodes2.pro  connectiondialog.cpp  connectiondialog.ui  widget.cpp  widget.h  widget.ui
DiskNodes3/: connectiondialog.cpp  connectiondialog.ui  widget.cpp
Proyecto-3-TEC-File-System/: Proyecto-3-TEC-File-System.pro  controllernodeserver.cpp  controllernodeserver.h  controllernodesocket.cpp  controllernodesocket.h  main.cpp
RAID/DISK-NODE-1/: Archivo2.txt  Archivo3.txt  prueba.txt
ceSEARCH/: CMakeLists.txt  ceSEARCH.pro  main.cpp  widget.cpp  widget.h  widget.ui
